#------------------------------------------------------------------------------
# Include source and build directories
#------------------------------------------------------------------------------
include_directories(
  ${PDC_INCLUDES_BUILD_TIME}
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${PDC_SOURCE_DIR}/src/server/include
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/include
  ${PDC_SOURCE_DIR}/src/server/dablooms
  ${PDC_SOURCE_DIR}/src/api/include
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include
  ${PDC_SOURCE_DIR}/src/api/pdc_region/include
  ${PDC_SOURCE_DIR}/src/api/pdc_query/include
  ${PDC_SOURCE_DIR}/src/api/pdc_transform/include
  ${PDC_SOURCE_DIR}/src/api/pdc_analysis/include
  ${PDC_SOURCE_DIR}/src/api/profiling/include
  ${PDC_SOURCE_DIR}/src/utils/include
  ${MERCURY_INCLUDE_DIR}
  ${FASTBIT_INCLUDE_DIR}
)

install(
  FILES
    ${CMAKE_BINARY_DIR}/pdc_config.h
  DESTINATION
    ${PDC_INSTALL_INCLUDE_DIR}
  COMPONENT
    headers
)

#------------------------------------------------------------------------------
# Options
#------------------------------------------------------------------------------
#add_definitions(-DPDC_ENABLE_MPI=1)
#add_definitions(-DPDC_TIMING=1)
#add_definitions(-DPDC_ENABLE_CHECKPOINT=1)
#add_definitions(-DENABLE_MULTITHREAD=1)

#------------------------------------------------------------------------------
# Configure module header files
#------------------------------------------------------------------------------
# Set unique vars used in the autogenerated config file (symbol import/export)
if(BUILD_SHARED_LIBS)
  set(PDC_BUILD_SHARED_LIBS 1)
  set(PDC_LIBTYPE SHARED)
else()
  set(PDC_BUILD_SHARED_LIBS 0)
  set(PDC_LIBTYPE STATIC)
endif()

#------------------------------------------------------------------------------
# Set sources
#------------------------------------------------------------------------------
set(PDC_PROF_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/pdc_hashtab.c
  ${CMAKE_CURRENT_SOURCE_DIR}/pdc_stack_ops.c
  )

#------------------------------------------------------------------------------
# Libraries
#------------------------------------------------------------------------------
# PDCPROF
add_library(pdcprof ${PDC_PROF_SRCS})
pdc_set_lib_options(pdcprof "pdcprof" ${PDC_LIBTYPE})

set(PDC_EXPORTED_LIBS pdcprof ${PDC_EXPORTED_LIBS})

#-----------------------------------------------------------------------------
# Specify project header files to be installed
#-----------------------------------------------------------------------------
set(PDC_PROF_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/include/pdc_hashtab.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/pdc_stack_ops.h
  )

#-----------------------------------------------------------------------------
# Add file(s) to CMake Install
#-----------------------------------------------------------------------------
install(
  FILES
    ${PDC_PROF_HEADERS}
  DESTINATION
    ${PDC_INSTALL_INCLUDE_DIR}
  COMPONENT
    headers
)

#-----------------------------------------------------------------------------
# Add Target(s) to CMake Install
#-----------------------------------------------------------------------------
install(
  TARGETS
    pdcprof
  EXPORT
    ${PDC_EXPORTED_TARGETS}
  LIBRARY DESTINATION ${PDC_INSTALL_LIB_DIR}
  ARCHIVE DESTINATION ${PDC_INSTALL_LIB_DIR}
  RUNTIME DESTINATION ${PDC_INSTALL_BIN_DIR}
)

#------------------------------------------------------------------------------
# Set variables for parent scope
#------------------------------------------------------------------------------
# Used by config.cmake.build.in and Testing
set(PDC_INCLUDES_BUILD_TIME
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${PDC_EXT_INCLUDE_DEPENDENCIES}
  PARENT_SCOPE
)

# Used by config.cmake.install.in
set(PDC_INCLUDES_INSTALL_TIME
  ${PDC_INSTALL_INCLUDE_DIR}
  ${PDC_EXT_INCLUDE_DEPENDENCIES}
  PARENT_SCOPE
)
